--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: DJCoder.
+name: DJCoder
 
 # Short bio or description (displayed in the header)
 description: Cloud Native Development
