--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 name: DJCoder
 
 # Short bio or description (displayed in the header)
-description: Cloud Native Development
+description: Engineering Blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/devdjcoder/devdjcoder.github.io/master/images/jekyll-logo.png
@@ -46,7 +46,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "https://devdjcoder.github.io/"
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -72,9 +72,10 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # Exclude these files from your production _site
 exclude:
@@ -84,4 +85,6 @@ exclude:
   - README.md
   - CNAME
 
+# remote_theme: 
+#   - pages-themes/slate@v0.2.0
 theme: slate
